Added favicon.ico Modified index.html Removed potaaato.json Added styles.css Added darwin.png Added diego.png 👀

--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
-<p>Hello world</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://ka-f.fontawesome.com">
+    <script src="https://kit.fontawesome.com/2dbc58b55d.js" crossorigin="anonymous"></script>
+    <meta name="description" content="Hey ! I'm Diego, under the nickname of Potaaato 🥔. I'm a 14 years old french dev, and i like to do some nerdy stuff like networking, electronics and stuff like that.">
+    <title>Potaaato</title>
+</head>
+<body>
+    <div class="head">
+        <img src="https://hc-cdn.hel1.your-objectstorage.com/s/v3/ca8227056fb7595415fa703bb2a602e08210d8b7_image.png" alt="My PFP">
+        <div class="bio">
+            <p>Hey ! I'm Diego, under the nickname of Potaaato 🥔. I'm a 14 years old french dev <i>(click here for more info)</i>, and i like to do some nerdy stuff like networking, electronics <i>(esp32 projects 🗿)</i> and stuff like that.</p>
+        </div>
+        <div class="socials">
+            <a href="https://github.com/potaaatoo" target="_blank" aria-label="My GitHub profile">
+                <i class="fa-brands fa-github"></i>
+            </a>
+            <a href="https://discord.com/users/1228398662464311409" target="_blank" aria-label="My Discord account">
+                <i class="fa-brands fa-discord"></i>
+            </a>
+            <a href="mailto:potaaato.doodle894@passinbox.com" target="_blank" aria-label="My email">
+                <i class="fa-solid fa-envelope"></i>
+            </a>
+        </div>
+        <h3>My Skills:</h3>
+        <div class="skills">
+            <i class="fa-brands fa-css3-alt skillfloat1"></i>
+            <i class="fa-brands fa-html5 skillfloat2"></i>
+            <i class="fa-brands fa-docker skillfloat1"></i>
+            <i class="fa-brands fa-github skillfloat2"></i>
+            <i class="fa-solid fa-terminal skillfloat1"></i>
+            <i class="fa-solid fa-microchip skillfloat2"></i>
+            <i class="fa-solid fa-network-wired skillfloat1"></i>
+        </div>
+    </div>
+    <a href="#projects">
+        <div class="scrolldown">
+        <i class="fa-solid fa-arrow-down"></i>
+    </a>
+    </div>
+    <hr>
+    <div id="projects"> <!-- Just realised that ts is absolutely not responsive ☠️ -->
+        <div class="tile">
+            <img src="https://hc-cdn.hel1.your-objectstorage.com/s/v3/6843a29bc75fb2c795e44fb8b6e829ee471013d0_image.png" alt="I have no public project yet." loading="lazy">
+            <h2>Oops...</h2>
+            <p>It seems that I have no cool public project to show here yet.</p>
+            <div class="space"></div> <!-- Yeah i made this and so what ☠️ -->
+            <div class="footer">
+                <p>Made by <a href="https://github.com/potaaatoo" target="_blank" rel="noopener noreferrer">Potaaato</a> | Source code here | Feel free to contact me !</p>
+            </div>
+        </div>
+    </div>
+</body>
+</html> 
