Update index.html Update styles.css Added blocking for little screens: the display of the website will be blocked if the width of the screens is less than 600px.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <title>Potaaato</title>
 </head>
 <body>
+    <div class="nomobile">
+        <div class="nomobile-img">
+            <img src="https://hc-cdn.hel1.your-objectstorage.com/s/v3/6843a29bc75fb2c795e44fb8b6e829ee471013d0_image.png" alt="Oops...">
+        </div>
+        <h2>Sorry, this website is not adaptated to mobile/little screens yet.</h2>
+    </div>
     <div class="head">
         <img src="https://hc-cdn.hel1.your-objectstorage.com/s/v3/ca8227056fb7595415fa703bb2a602e08210d8b7_image.png" alt="My PFP">
         <div class="bio">
@@ -38,7 +44,7 @@
             <i class="fa-solid fa-network-wired skillfloat1"></i>
         </div>
     </div>
-    <a href="#projects">
+    <a href="#projects" aria-label="Go to my projects">
         <div class="scrolldown">
         <i class="fa-solid fa-arrow-down"></i>
     </a>
@@ -49,11 +55,11 @@
             <img src="https://hc-cdn.hel1.your-objectstorage.com/s/v3/6843a29bc75fb2c795e44fb8b6e829ee471013d0_image.png" alt="I have no public project yet." loading="lazy">
             <h2>Oops...</h2>
             <p>It seems that I have no cool public project to show here yet.</p>
-            <div class="space"></div> <!-- Yeah i made this and so what ☠️ -->
+            <div class="space"></div> <!-- Yeah i made this and so what ☠️ --> 
             <div class="footer">
-                <p>Made by <a href="https://github.com/potaaatoo" target="_blank" rel="noopener noreferrer">Potaaato</a> | Source code here | Feel free to contact me !</p>
+                <p>Made by <a href="https://github.com/potaaatoo" target="_blank" rel="noopener noreferrer">Potaaato</a> | Source code <a href="https://github.com/potaaatoo/potaaatoo.github.io" target="_blank" rel="noopener noreferrer">here</a> | Feel free to contact me !</p>
             </div>
         </div>
     </div>
 </body>
-</html> 
+</html>
