Update index.html Update styles.css Just realized that my website is'nt responsive at all lets work on that

--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
     <title>Potaaato</title>
 </head>
 <body>
-    <div class="nomobile">
-        <div class="nomobile-img">
-            <img src="https://hc-cdn.hel1.your-objectstorage.com/s/v3/6843a29bc75fb2c795e44fb8b6e829ee471013d0_image.png" alt="Oops...">
-        </div>
+    <div class="nomobile"> <!--Sorry making a responsive site is sooooo hard lol-->
         <h2>Sorry, this website is not adaptated to mobile/little screens yet.</h2>
+    </div>
+    <div class="darwin">
+        <a href="/remote.html">
+            <img src="/assets/img/darwin.png" alt="Darwin">
+        </a>
     </div>
     <div class="head">
         <img src="https://hc-cdn.hel1.your-objectstorage.com/s/v3/ca8227056fb7595415fa703bb2a602e08210d8b7_image.png" alt="My PFP">
