--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://ka-f.fontawesome.com">
-    <script src="https://kit.fontawesome.com/2dbc58b55d.js" crossorigin="anonymous"></script>
     <meta name="description" content="Hey ! I'm Diego, under the nickname of Potaaato 🥔. I'm a 14 years old french dev, and i like to do some nerdy stuff like networking, electronics and stuff like that.">
     <title>Potaaato</title>
 </head>
@@ -16,11 +15,11 @@
     </div>
     <div class="darwin">
         <a href="/remote.html">
-            <img src="/assets/img/darwin.png" alt="Darwin">
+            <img src="/assets/img/darwin.webp" alt="Darwin">
         </a>
     </div>
     <div class="head">
-        <img src="https://hc-cdn.hel1.your-objectstorage.com/s/v3/ca8227056fb7595415fa703bb2a602e08210d8b7_image.png" alt="My PFP">
+        <img src="/assets/img/potaaato.webp" alt="My PFP">
         <div class="bio">
             <p>Hey ! I'm Diego, under the nickname of Potaaato 🥔. I'm a 14 years old french dev <i>(click here for more info)</i>, and i like to do some nerdy stuff like networking, electronics <i>(esp32 projects 🗿)</i> and stuff like that.</p>
         </div>
@@ -54,14 +53,12 @@
     <hr>
     <div id="projects"> <!-- Just realised that ts is absolutely not responsive ☠️ -->
         <div class="tile">
-            <img src="https://hc-cdn.hel1.your-objectstorage.com/s/v3/6843a29bc75fb2c795e44fb8b6e829ee471013d0_image.png" alt="I have no public project yet." loading="lazy">
+            <img src="/assets/img/oops.webp" alt="I have no public project yet." loading="lazy">
             <h2>Oops...</h2>
             <p>It seems that I have no cool public project to show here yet.</p>
-            <div class="space"></div> <!-- Yeah i made this and so what ☠️ --> 
-            <div class="footer">
-                <p>Made by <a href="https://github.com/potaaatoo" target="_blank" rel="noopener noreferrer">Potaaato</a> | Source code <a href="https://github.com/potaaatoo/potaaatoo.github.io" target="_blank" rel="noopener noreferrer">here</a> | Feel free to contact me !</p>
-            </div>
+            <p id="clickondarwin">Maybe that if you find Darwin you will find something...</p>
         </div>
     </div>
 </body>
+<script src="https://kit.fontawesome.com/2dbc58b55d.js" crossorigin="anonymous"></script>
 </html>
