Re-added remote.html Update index.html Update styles.css

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <img src="/assets/img/oops.webp" alt="I have no public project yet." loading="lazy">
             <h2>Oops...</h2>
             <p>It seems that I have no cool public project to show here yet.</p>
-            <p id="clickondarwin">Maybe that if you find Darwin you will find something...</p>
+            <p id="clickondarwin">But you may find something by clicking on Darwin in the right corner of the page 👀</p>
         </div>
     </div>
 </body>
